--- a/202301/20230115.md
+++ b/202301/20230115.md
@@ -4,8 +4,8 @@
 * 관계 연산자
 * 논리 연산자
 * instanceof
-* assignment(=) operator
+* assignment(`=`) operator
 * 함수형 인터페이스
-* 람다식, 화살표(->) 연산자
+* 람다식, 화살표(`->`) 연산자
 * 3항 연산자
 * 연산자 우선 순위
